force-app/main/default/objects/DMRNoteProxy__c/DMRNoteProxy__c.object-meta.xml
<CustomObject>
    <description>This object enables bulk import of ContentNote records. Import to this object with content and linking details, then use the list views or Apex DMRNoteBulkImporter to convert to note records..</description>
    <label>Note Proxy</label>
    <nameField>
        <displayFormat>NP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note Proxies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>