force-app/main/default/objects/DMRNoteProxy__c/fields/LinkedTo__c.field-meta.xml
<CustomField>
    <fullName>LinkedTo__c</fullName>
    <label>Linked To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>