force-app/main/default/objects/DMRNoteProxy__c/fields/Note_ID__c.field-meta.xml
<CustomField>
    <fullName>Note_ID__c</fullName>
    <label>Note ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>