force-app/main/default/objects/DMRNoteProxy__c/fields/ShareType__c.field-meta.xml
<CustomField>
    <fullName>ShareType__c</fullName>
    <label>ShareType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>