force-app/main/default/objects/DMRNoteProxy__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <length>24</length>
    <type>Text</type>
</CustomField>