force-app/main/default/objects/DMRNoteProxy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <columns>Imported__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>