force-app/main/default/objects/DMRNoteProxy__c/listViews/Notes_to_Import.listView-meta.xml
<ListView>
    <fullName>Notes_to_Import</fullName>
    <columns>NAME</columns>
    <columns>LinkedTo__c</columns>
    <columns>Title__c</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Imported__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Error__c</field>
        <operation>equals</operation>
    </filters>
    <label>Notes to Import</label>
</ListView>